# mri-connect

./: .gitignore  .pylintrc  .travis.yml  LICENSE  Pipfile  Procfile  README.md  import-data.py  importer.py  init.py  manage.py  package.json  pyproject.toml  requirements-development.txt  requirements.txt  run-gunicorn.sh  run.py  run.sh  runtime.txt
app/: __init__.py  config.py  convert.py  formats.py  models.py  views.py
app/static/: gmba-index.css  gmba-search.tag
app/templates/: demo.html  index.html  offline.html  widget.html
assets/: admin.css
backend/: __init__.py  client.py  config.py  models.py  schema.py
backend/api/: __init__.py  connect.py  search.py
backend/loader/: people.py  util.py
client/: index.html  offline.html  widget.html
convert/: proclim_expertise.csv
docs/: email_template.html
expert_management/: admin.py  apps.py  data.py  forms.py  helper.py  models.py  selector.py  serializers.py  urls.py  util.py  views.py
expert_management/loader/: experts.py
expert_management/migrations/: 0001_initial.py  0002_auto_20201217_1105.py  0002_auto_20210126_0640.py  0002_auto_20210126_0640_squashed_0003_auto_20210126_0707.py  0002_mountain_model_and_expertise_or_interest_ranges_added.py  0003_auto_20210126_0707.py  0003_auto_20210129_1643.py  0004_auto_20210202_0638.py  0005_auto_20210203_1335.py  0006_auto_20210204_1329.py  0007_spamfilterword.py  0008_affiliation_creator.py
expert_management/utils/: common.py  importdata.py  mailchimp.py
front/: package.json  vue.config.js
front/public/: demo.html  index.html  manifest.json
front/src/: App.vue  backend.js  main.js  router.js
mriconnect/: settings.py  urls.py  wsgi.py
mriconnect/settings/: base.py  (+2 more)
people/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  wizard.py
public/: demo.html
src/: backend.js  main.js  router.js
static/: index.css
templates/: base.html
(+104 files in other folders)
