[tool.poetry]
name = "mri-ra-connect"
version = "0.1.0"
description = ""
authors = ["Oleg Lavrovsky <oleg@datalets.ch>"]

[tool.poetry.dependencies]
python = ">=3.6"
gunicorn = "*"
python-dotenv = "*"
django-ra-erp = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"
bumpversion = "*"
pytest-sugar = "*"
pytest-cov = "*"
