[tool.poetry]
name = "mri-ra-connect"
version = "0.1.0"
description = ""
authors = ["Oleg Lavrovsky <oleg@datalets.ch>"]

[tool.poetry.dependencies]
python = ">=3.6"
gunicorn = "*"
python-dotenv = "*"
django-ra-erp = "^1.1.1"
django-countries = "^6.1.3"
django-multiselectfield = "^0.1.12"
data-wizard = "^1.3.0"
djangorestframework = "^3.12.1"
markdown = "^3.3.3"
django-filter = "^2.4.0"
rapidfuzz = "^0.12.5"
django-cors-headers = "^3.5.0"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"
bumpversion = "*"
pytest-sugar = "*"
pytest-cov = "*"
