[tool.poetry]
name = "mri-connect"
version = "0.1.0"
description = ""
authors = ["Ahmad Bilal Khalid <ahmedbilal96@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.3, <4"
Django = "^3.1.4"
django-countries = "^7.0"
Pillow = "^8.0.1"
dj-database-url = "^0.5.0"
django-map-widgets = "^0.3.0"
openpyxl = "^3.0.5"
Unidecode = "^1.1.2"
psycopg2 = "^2.8.6"
bleach = "^3.2.1"
numpy = "^1.19.4"
django-jazzmin = "^2.4.3"
django-crispy-forms = "^1.10.0"
pandas = "^1.2.0"
django-debug-toolbar = "^3.2"
django-import-export = "^2.5.0"
mailchimp-marketing = "^3.0.28"
django-recaptcha = "^2.0.6"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
pylint = "^2.6.0"
pylint-django = "^2.3.0"
ipynb = "^0.5.1"
ipython = "^7.19.0"
jupyterlab = "^3.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
